[gd_scene load_steps=12 format=2]

[ext_resource path="res://Script/Import_Config/Gradient2D_Texture.gd" type="Script" id=1]
[ext_resource path="res://Script/Import_Config/Point.gd" type="Script" id=2]
[ext_resource path="res://Script/Import_Config/Color_Control.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray(  )
colors = PoolColorArray(  )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.628809, 0.67036, 0.686981 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1, 0.2, 0.2, 0.2, 0 )

[sub_resource type="GradientTexture2D" id=5]
gradient = SubResource( 4 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.217, 0.779 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 2

[node name="Gradient2D_Texture" type="PanelContainer"]
margin_right = 162.0
margin_bottom = 248.0
rect_min_size = Vector2( 162, 248 )
script = ExtResource( 1 )

[node name="Vbox" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 159.0
margin_bottom = 269.0

[node name="GradientTexture" type="PanelContainer" parent="Vbox"]
margin_right = 156.0
margin_bottom = 162.0
rect_min_size = Vector2( 156, 162 )
size_flags_horizontal = 4

[node name="Text" type="TextureRect" parent="Vbox/GradientTexture"]
margin_left = 3.0
margin_top = 5.0
margin_right = 153.0
margin_bottom = 155.0
rect_min_size = Vector2( 150, 150 )
texture = SubResource( 2 )
expand = true

[node name="Points" type="Control" parent="Vbox/GradientTexture"]
margin_left = 3.0
margin_top = 5.0
margin_right = 153.0
margin_bottom = 155.0

[node name="Point" type="Node2D" parent="Vbox/GradientTexture/Points"]
script = ExtResource( 2 )

[node name="Point" type="TextureButton" parent="Vbox/GradientTexture/Points/Point"]
margin_left = -12.0
margin_top = -12.0
margin_right = 13.0
margin_bottom = 13.0
rect_pivot_offset = Vector2( 16, 16 )
mouse_default_cursor_shape = 6
texture_normal = SubResource( 5 )
expand = true
stretch_mode = 5

[node name="Point2" type="Node2D" parent="Vbox/GradientTexture/Points"]
position = Vector2( 150, 0 )
script = ExtResource( 2 )
from = false

[node name="Point" type="TextureButton" parent="Vbox/GradientTexture/Points/Point2"]
margin_left = -12.0
margin_top = -12.0
margin_right = 13.0
margin_bottom = 13.0
rect_pivot_offset = Vector2( 16, 16 )
mouse_default_cursor_shape = 6
texture_normal = SubResource( 5 )
expand = true
stretch_mode = 5

[node name="Hs" type="HSeparator" parent="Vbox"]
margin_top = 166.0
margin_right = 156.0
margin_bottom = 170.0

[node name="Gradient" type="PanelContainer" parent="Vbox"]
margin_top = 174.0
margin_right = 156.0
margin_bottom = 236.0
rect_min_size = Vector2( 156, 62 )
size_flags_horizontal = 4

[node name="Tex" type="TextureButton" parent="Vbox/Gradient"]
margin_left = 3.0
margin_top = 5.0
margin_right = 153.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
texture_normal = SubResource( 10 )
expand = true

[node name="Controls" type="Control" parent="Vbox/Gradient/Tex"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Color_Control" type="Control" parent="Vbox/Gradient/Tex/Controls"]
margin_right = 2.0
margin_bottom = 50.0
mouse_filter = 2

[node name="ColorRect" type="Panel" parent="Vbox/Gradient/Tex/Controls/Color_Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 1.0
custom_styles/panel = SubResource( 11 )

[node name="Color_Control" type="ColorPickerButton" parent="Vbox/Gradient/Tex/Controls/Color_Control"]
margin_left = -3.0
margin_top = 18.0
margin_right = 5.0
margin_bottom = 50.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
button_mask = 3
script = ExtResource( 3 )

[node name="Fill" type="OptionButton" parent="Vbox"]
margin_top = 240.0
margin_right = 156.0
margin_bottom = 264.0
text = "Linear"
items = [ "Linear", null, false, 0, null, "Radial", null, false, 1, null ]
selected = 0

[connection signal="button_down" from="Vbox/GradientTexture/Points/Point/Point" to="Vbox/GradientTexture/Points/Point" method="_on_Point_button_down"]
[connection signal="button_up" from="Vbox/GradientTexture/Points/Point/Point" to="Vbox/GradientTexture/Points/Point" method="_on_Point_button_up"]
[connection signal="button_down" from="Vbox/GradientTexture/Points/Point2/Point" to="Vbox/GradientTexture/Points/Point2" method="_on_Point_button_down"]
[connection signal="button_up" from="Vbox/GradientTexture/Points/Point2/Point" to="Vbox/GradientTexture/Points/Point2" method="_on_Point_button_up"]
[connection signal="pressed" from="Vbox/Gradient/Tex" to="." method="_on_Tex_pressed"]
[connection signal="gui_input" from="Vbox/Gradient/Tex/Controls/Color_Control/Color_Control" to="Vbox/Gradient/Tex/Controls/Color_Control/Color_Control" method="_on_Color_Control_gui_input"]
[connection signal="item_selected" from="Vbox/Fill" to="." method="_on_Fill_item_selected"]
